# av-policy-selection

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  simulations.py  walkthrough.py
.binder/: Dockerfile
figures/: .gitignore
resources/: anytime-valid-off-policy-inference-for-contextual-bandits.tex  anytime-valid-optimal-policy-identification.tex  instance-optimal-pac-algorithms-for-contextual-bandits.tex
src/: utils.py
src/av_policy_selection/: __init__.py  confidence_sequences.py  load_data.py  policy_selection.py  pseudo_outcomes.py  reanalysis.py  reward_predictors.py  simulation.py
tests/: test_confidence_sequences.py  test_policy_selection.py  test_pseudo_outcomes.py  test_reward_predictors.py  test_simulation.py
